# gumbel-sampler

./: .gitignore  Bipartite Graphs.ipynb  README.md  Sampling Bipartite Graphs.ipynb  The Gumbel Distribution.ipynb  data.py  main.py  matching_functions.py  matching_sampler.py  permanent.pyx  plots.py  requirements.txt  ryser.pyx  sampler.py  sampler.pyx  setup.py
cpp/: CMakeLists.txt
cpp/src/: accept-reject-example.cpp  gumbel.hpp  main.cpp  plotGraphs.cpp  plots.cpp  sampler.cpp
